# iOverlay-py

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  stubtest_allowlist.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
conda/: recipe.yaml
docs/: analyze_validity.py  fuzzer-spots-12.json  ogc-validity-differences.md
src/: clip.rs  clip_ops.rs  enums.rs  lib.rs  options.rs  outline.rs  overlay.rs  simplify.rs  slice.rs  stroke.rs  style.rs  types.rs
tests/: __init__.py  conftest.py  shapely_utils.py  test_clip.py  test_enums.py  test_fuzzer.py  test_ogc_validity.py  test_options.py  test_outline.py  test_overlay.py  test_overlay_graph.py  test_simplify.py  test_slice.py  test_stroke.py  test_stubtest.py  test_version.py
tests/_fuzzer/: __init__.py  __main__.py  generators.py  runner.py
