[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "i_overlay"
# Version is read from Cargo.toml by maturin
dynamic = ["version"]
description = "Python bindings for iOverlay: Boolean Operations for 2D Polygons"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["geometry", "polygon", "boolean", "union", "intersection", "difference", "clipping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/bretttully/iOverlay-py"
Repository = "https://github.com/bretttully/iOverlay-py"

[tool.maturin]
# Enable extension-module feature for Python extension builds
features = ["extension-module"]

[tool.ruff]
line-length = 120
target-version = "py313"

exclude = [
    ".git",
    "build",
]

[tool.ruff.lint]
select = [
    "I",  # isort
    "NPY",  # numpy
    "RUF",  # ruff specific
    "E",  # pycodestyle (Errors)
    "W",  # pycodestyle (Warnings)
    "F",  # pyflakes
    "UP",  # pyupgrade
    "C90",  # mccabe complexity
    "B",  # flake8-bugbear
    "N",  # flake8-naming
    "A",  # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PL",  # pylint
]

ignore = [
    "PLR2004",  # pylint magic number
    "COM812",  # trailing comma conflict with formatter
]

[tool.ruff.lint.pylint]
max-statements = 100
max-args = 10

[tool.ruff.lint.isort]
known-first-party = ["i_overlay"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
